Update -> Estrutura Super base

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<html>
-<head>
-    <title>Getting Started: Serving Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
-    <p>Alunos: <a href="http://localhost:8080/alunos">here</a></p>
-    <p>Professores: <a href="http://localhost:8080/professores">here</a></p>
-</body>
+<html lang="pt">
+    <head>
+        <title>Getting Started: Serving Web Content</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    </head>
+    <body>
+        <p>Alunos: <a href="http://localhost:8080/alunos">here</a></p>
+        <p>Professores: <a href="http://localhost:8080/professores">here</a></p>
+    </body>
 </html>
