--- a/src/main/resources/templates/professores.html
+++ b/src/main/resources/templates/professores.html
@@ -1,11 +1,45 @@
 <!DOCTYPE HTML>
-<html lang="pt">
-    <head>
-        <title>Getting Started: Serving Web Content</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    </head>
-    <body>
-        <p>Voltar <a href="http://localhost:8080">here</a></p>
-        <p>PÃ¡gina dos Professores</p>
-    </body>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Pagina do Professor</title>
+    <meta charset="ISO-8859-1"/>
+    <link rel="stylesheet" type="text/css" href="/css/teacher.css" />
+    <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
+</head>
+<body>
+<nav role="navigation" class="primary-navigation">
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Courses &dtrif;</a>
+            <ul class="dropdown">
+                <li><a href="#">View courses</a></li>
+                <li><a href="#">Assign grades</a></li>
+                <li><a href="#">View grades</a></li>
+            </ul>
+        </li>
+        <li><a href="#">Profile</a></li>
+    </ul>
+</nav>
+<h1>Lista de Professores</h1>
+<table border="1" class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Email</th>
+            <th>Salario</th>
+            <!-- Adicione mais colunas conforme necessário -->
+        </tr>
+    </thead>
+    <!-- Iteração sobre a lista de professores -->
+    <tbody>
+        <tr th:each="professor : ${profs}">
+            <td th:text="${professor.idu}"></td>
+            <td th:text="${professor.name}"></td>
+            <td th:text="${professor.email}"></td>
+            <td th:text="${professor.salary}"></td>
+        </tr>
+    </tbody>
+</table>
+</body>
 </html>
