--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Pagina do Professor</title>
+    <title>Pagina do Aluno</title>
     <meta charset="ISO-8859-1"/>
     <link rel="stylesheet" type="text/css" href="/css/teacher.css" />
     <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
@@ -12,33 +12,39 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Courses &dtrif;</a>
             <ul class="dropdown">
-                <li><a href="#">View courses</a></li>
-                <li><a href="#">Assign grades</a></li>
                 <li><a href="#">View grades</a></li>
             </ul>
         </li>
         <li><a href="#">Profile</a></li>
     </ul>
 </nav>
-<h1>Lista de Professores</h1>
+<h1>Lista de Alunos</h1>
 <table border="1" class="table">
     <thead>
-        <tr>
-            <th>ID</th>
-            <th>Nome</th>
-            <th>Email</th>
-            <th>Salario</th>
-            <!-- Adicione mais colunas conforme necessário -->
-        </tr>
+    <tr>
+        <th>ID</th>
+        <th>Nome</th>
+        <th>Email</th>
+        <th>Data de Nascimento</th>
+        <th>Morada</th>
+        <th>Curso</th>
+        <th>Media</th>
+        <th>Estado Matrícula</th>
+        <!-- Adicione mais colunas conforme necessário -->
+    </tr>
     </thead>
     <!-- Iteração sobre a lista de professores -->
     <tbody>
-        <tr th:each="professor : ${profs}">
-            <td th:text="${professor.idu}"></td>
-            <td th:text="${professor.name}"></td>
-            <td th:text="${professor.email}"></td>
-            <td th:text="${professor.salary}"></td>
-        </tr>
+    <tr th:each="aluno : ${list_student}">
+        <td th:text="${aluno.ids}"></td>
+        <td th:text="${aluno.name}"></td>
+        <td th:text="${aluno.email}"></td>
+        <td th:text="${aluno.birthdate}"></td>
+        <td th:text="${aluno.address}"></td>
+        <td th:text="${aluno.idc}"></td>
+        <td th:text="${aluno.average}"></td>
+        <td th:text="${aluno.state}"></td>
+    </tr>
     </tbody>
 </table>
 </body>
