--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
+        <p>Admin: <a href="http://localhost:8080/admin">here</a></p>
         <p>Alunos: <a href="http://localhost:8080/student">here</a></p>
         <p>Professores: <a href="http://localhost:8080/teacher">here</a></p>
     </body>
