--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -12,7 +12,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Courses &dtrif;</a>
             <ul class="dropdown">
-                <li><a href="#">View courses</a></li>
+                <li><a href="http://localhost:8080/course">View courses</a></li>
                 <li><a href="#">Assign grades</a></li>
                 <li><a href="#">View grades</a></li>
             </ul>
