Sistema de Login

--- a/src/main/resources/templates/Admin/addStudent.html
+++ b/src/main/resources/templates/Admin/addStudent.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Admin - Add Teachers</title>
+        <title>Admin - Add Student</title>
         <meta charset="ISO-8859-1"/>
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
         <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
