--- a/src/main/resources/templates/Admin/admin.html
+++ b/src/main/resources/templates/Admin/admin.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
     <head>
-        <title>Admins Page</title>
+        <title>Admin's Page</title>
         <meta charset="ISO-8859-1"/>
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
         <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
