Admin - Aluno tudo feito / Session / A base do Professor e Base do Aluno

--- a/src/main/resources/templates/Admin/addCourse.html
+++ b/src/main/resources/templates/Admin/addCourse.html
@@ -18,7 +18,7 @@
             <li><a th:href="@{/admin/teacher}">Teachers</a></li>
           </ul>
         </li>
-        <li><a href="#">Profile</a></li>
+        <li><a th:href="@{/logout}">Logout</a></li>
       </ul>
     </nav>
 
