--- a/src/main/resources/templates/Admin/course.html
+++ b/src/main/resources/templates/Admin/course.html
@@ -18,7 +18,7 @@
             <li><a th:href="@{/admin/teacher}">Teachers</a></li>
           </ul>
         </li>
-        <li><a href="#">Profile</a></li>
+        <li><a th:href="@{/logout}">Logout</a></li>
       </ul>
     </nav>
 
