--- a/src/main/resources/templates/Student/class.html
+++ b/src/main/resources/templates/Student/class.html
@@ -15,6 +15,8 @@
             </ul>
         </nav>
 
+
+        <div class="table_div">
         <h1>Class Teacher</h1>
 
         <table border="1" class="table">
@@ -32,11 +34,14 @@
                 <td th:text="${professor.idt}"></td>
                 <td th:text="${professor.name}"></td>
                 <td th:text="${professor.email}"></td>
-                <td th:text="${professor.birthdate}"></td>
+                <td th:text="${professor.birthdate.getDay()} + '/' + ${professor.birthdate.getMonth()} + '/' + ${professor.birthdate.year + 1900}" ></td>
                 <td th:text="${professor.address}"></td>
             </tr>
             </tbody>
         </table>
+        </div>
+
+        <div class="table_div">
 
         <h1>Classmates</h1>
 
@@ -56,12 +61,12 @@
                 <td th:text="${aluno.ids}"></td>
                 <td th:text="${aluno.name}"></td>
                 <td th:text="${aluno.email}"></td>
-                <td th:text="${aluno.birthdate}"></td>
+                <td th:text="${aluno.birthdate.getDay()} + '/' + ${aluno.birthdate.getMonth()} + '/' + ${aluno.birthdate.year + 1900}" ></td>
                 <td th:text="${aluno.address}"></td>
                 <td th:text="${aluno.average}"></td>
             </tr>
             </tbody>
         </table>
-
+        </div>
     </body>
 </html>
