--- a/src/main/resources/templates/Teacher/in.html
+++ b/src/main/resources/templates/Teacher/in.html
@@ -33,6 +33,8 @@
     </ul>
 </nav>
 
+<div class="table_div">
+
 <h1>In Course</h1>
 
 <table border="1" class="table">
@@ -52,7 +54,7 @@
         <td th:text="${aluno.ids}"></td>
         <td th:text="${aluno.name}"></td>
         <td th:text="${aluno.email}"></td>
-        <td th:text="${aluno.birthdate}"></td>
+        <td th:text="${aluno.birthdate.getDay()} + '/' + ${aluno.birthdate.getMonth()} + '/' + ${aluno.birthdate.year + 1900}" ></td>
         <td th:text="${aluno.address}"></td>
         <td th:text="${aluno.average}"></td>
         <td><a href="#" onclick="changeAverage()">Change Average</a></td>
@@ -61,6 +63,7 @@
 </table><br>
 <div>
     <p id="changingAverage" style="display: none;">Nota:&nbsp<input type="text">&nbsp<button type="submit">Change</button><br><br></p>
+</div>
 </div>
 </body>
 </html>
