--- a/src/main/resources/templates/Teacher/student.html
+++ b/src/main/resources/templates/Teacher/student.html
@@ -22,6 +22,8 @@
             </ul>
         </nav>
 
+        <div class="table_div">
+
         <h1>Listed Students</h1>
 
         <table border="1" class="table">
@@ -40,11 +42,12 @@
                     <td th:text="${aluno.ids}"></td>
                     <td th:text="${aluno.name}"></td>
                     <td th:text="${aluno.email}"></td>
-                    <td th:text="${aluno.birthdate}"></td>
+                    <td th:text="${aluno.birthdate.getDay()} + '/' + ${aluno.birthdate.getMonth()} + '/' + ${aluno.birthdate.year + 1900}" ></td>
                     <td th:text="${aluno.address}"></td>
                     <td th:text="${aluno.average}"></td>
                 </tr>
             </tbody>
         </table>
+            </div>
     </body>
 </html>
