--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,11 +1,9 @@
 body {
     font-family: 'Arvo', serif;
-    background-color: #D9DCD6;
-    margin: 0;
-    padding: 0;
+    background: linear-gradient(140deg, #D9DCD6 31%, #00baa6 100%);
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 1000px;
 }
 
 nav {
@@ -13,20 +11,19 @@ nav {
         margin: 0 auto;
         display: block;
 
-        padding: 30px 0 0 0;
+        padding: 40px 0 0 0;
         text-align: center;
-        font-size: 16px;
+        font-size: 20px;
 
         ul li {
             list-style: none;
             margin: 0 auto;
-            border-left: 2px solid #3ca0e7;
+            border-left: 2px solid #00baa6;
             display: inline-block;
             padding: 0 30px;
             position: relative;
             text-decoration: none;
             text-align: center;
-            font-family: arvo;
         }
 
         li a {
@@ -34,7 +31,7 @@ nav {
         }
 
         li a:hover {
-            color: #3ca0e7;
+            color: #00baa6;
         }
 
         li:hover {
@@ -59,7 +56,7 @@ nav {
             min-width: 250px;
             text-align: left;
             padding-top: 20px;
-            box-shadow: 0px 3px 5px -1px #ccc;
+            box-shadow: 0 3px 5px -1px #ccc;
         }
 
         ul li ul li {
@@ -72,7 +69,7 @@ nav {
 
         ul li ul li a:hover {
             padding-left: 10px;
-            border-left: 2px solid #3ca0e7;
+            border-left: 2px solid #00baa6;
             transition: all 0.3s ease;
         }
     }
@@ -81,9 +78,10 @@ nav {
 a {
 
     text-decoration: none;
+    color: #0066ff;
 
     &:hover {
-        color: #3CA0E7;
+        color: #00976f;
     }
 
 }
@@ -97,9 +95,10 @@ ul li ul li a { transition: all 0.5s ease; }
 }
 
 .add_button{
+    font-weight: bold;
     margin: 0 auto;
     padding: 10px 20px;
-    background-color: #3ca0e7;
+    background-color: #00baa6;
     color: white;
     border: none;
     border-radius: 5px;
@@ -108,34 +107,34 @@ ul li ul li a { transition: all 0.5s ease; }
 }
 
 .add_button:hover{
-    background-color: #56a4e0;
+    background-color: #00aa98;
+}
+
+table, th, td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
 }
 
 table {
+    background: #dddddd;
     border-collapse: collapse;
     font-size: 0.9em;
-    font-family: sans-serif;
     min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    border-radius: 5px 5px 0 0;
+    box-shadow: 0 0 100px rgba(0, 0, 0, 0.15);
+    border-radius: 5px 5px 5px 5px;
     overflow: hidden;
 }
 
 thead tr {
-    background-color: #3ca0e7;
+    background-color: #00baa6;
     color: #ffffff;
     text-align: left;
-    border-bottom: none;
 }
 
 th, td {
     padding: 12px 15px;
-    border-left: none;
-    border-right: none;
-}
-
-tbody tr {
-    border-bottom: 1px solid #dddddd;
 }
 
 tbody tr:hover {
@@ -143,12 +142,7 @@ tbody tr:hover {
 }
 
 tbody tr:last-of-type {
-    border-bottom: 3px solid #3ca0e7;
-}
-
-tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
+    border-bottom: 3px solid #00baa6;
 }
 
 .login_div {
@@ -181,10 +175,9 @@ tbody tr.active-row {
     margin: 10px 0;
     border-radius: 5px;
     border: none;
-    background-color: #3ca0e7;
+    background-color: #00baa6;
     color: white;
     cursor: pointer;
-    font-family: 'Arvo', serif;
     font-size: 16px;
 }
 
@@ -234,10 +227,9 @@ tbody tr.active-row {
     margin-top: 10px;
     border-radius: 5px;
     border: none;
-    background-color: #3ca0e7;
+    background-color: #00baa6;
     color: white;
     cursor: pointer;
-    font-family: 'Arvo', serif;
     font-size: 16px;
 }
 
