--- a/src/main/resources/templates/Admin/student.html
+++ b/src/main/resources/templates/Admin/student.html
@@ -45,12 +45,12 @@
                     <td th:text="${aluno.ids}"></td>
                     <td th:text="${aluno.name}"></td>
                     <td th:text="${aluno.email}"></td>
-                    <td th:text="${aluno.birthdate.getDay()} + '/' + ${aluno.birthdate.getMonth()} + '/' + ${aluno.birthdate.year + 1900}" ></td>
+                    <td th:text="${#dates.format(aluno.birthdate, 'dd/MM/yyyy')}" ></td>
                     <td th:text="${aluno.address}"></td>
                     <td th:text="${aluno.idc}"></td>
                     <td th:text="${aluno.average}"></td>
                     <td th:text="${aluno.state}"></td>
-                    <td id="tentar"><a th:href="@{/admin/student/deleteStudent/{id}(id=${aluno.ids})}">Delete</a></td>
+                    <td><a th:href="@{/admin/student/deleteStudent/{id}(id=${aluno.ids})}">Delete</a></td>
                 </tr>
             </tbody>
         </table>
