--- a/src/main/resources/templates/Student/class.html
+++ b/src/main/resources/templates/Student/class.html
@@ -34,7 +34,7 @@
                 <td th:text="${professor.idt}"></td>
                 <td th:text="${professor.name}"></td>
                 <td th:text="${professor.email}"></td>
-                <td th:text="${professor.birthdate.getDay()} + '/' + ${professor.birthdate.getMonth()} + '/' + ${professor.birthdate.year + 1900}" ></td>
+                <td th:text="${#dates.format(professor.birthdate, 'dd/MM/yyyy')}" ></td>
                 <td th:text="${professor.address}"></td>
             </tr>
             </tbody>
@@ -61,7 +61,7 @@
                 <td th:text="${aluno.ids}"></td>
                 <td th:text="${aluno.name}"></td>
                 <td th:text="${aluno.email}"></td>
-                <td th:text="${aluno.birthdate.getDay()} + '/' + ${aluno.birthdate.getMonth()} + '/' + ${aluno.birthdate.year + 1900}" ></td>
+                <td th:text="${#dates.format(aluno.birthdate, 'dd/MM/yyyy')}"></td>
                 <td th:text="${aluno.address}"></td>
                 <td th:text="${aluno.average}"></td>
             </tr>
