--- a/src/main/resources/templates/Teacher/in.html
+++ b/src/main/resources/templates/Teacher/in.html
@@ -1,74 +1,58 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Teacher - Student In Course</title>
-    <meta charset="ISO-8859-1"/>
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
-</head>
+    <head>
+        <title>Teacher - Student In Course</title>
+        <meta charset="ISO-8859-1"/>
+        <link rel="stylesheet" type="text/css" href="/css/style.css" />
+        <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
+    </head>
 
-<script>
-    function changeAverage() {
-        var inputField = document.getElementById("changingAverage");
-        if (inputField.style.display === "none") {
-            inputField.style.display = "inline";
-        } else {
-            inputField.style.display = "none";
-        }
-    }
-</script>
-
-<body>
-<nav role="navigation" class="primary-navigation">
-    <ul>
-        <li><a th:href="@{/teacher}">Home</a></li>
-        <li><a href="#">Students&dtrif;</a>
-            <ul class="dropdown">
-                <li><a th:href="@{/teacher/student}">All</a></li>
-                <li><a th:href="@{/teacher/student/in}">In Course</a></li>
-                <li><a th:href="@{/teacher/student/out}">Finalized/Abandoned</a></li>
+    <body>
+        <nav role="navigation" class="primary-navigation">
+            <ul>
+                <li><a th:href="@{/teacher}">Home</a></li>
+                <li><a href="#">Students&dtrif;</a>
+                    <ul class="dropdown">
+                        <li><a th:href="@{/teacher/student}">All</a></li>
+                        <li><a th:href="@{/teacher/student/in}">In Course</a></li>
+                        <li><a th:href="@{/teacher/student/out}">Finalized/Abandoned</a></li>
+                    </ul>
+                </li>
+                <li><a th:href="@{/logout}">Logout</a></li>
             </ul>
-        </li>
-        <li><a th:href="@{/logout}">Logout</a></li>
-    </ul>
-</nav>
+        </nav>
 
-<div class="table_div">
+        <div class="table_div">
 
-<h1>In Course</h1>
+            <h1>In Course</h1>
+            <div th:if:text="${error_in}" style="color: red;">
+                <p th:text="${error_cA}"></p>
+            </div>
 
-<table border="1" class="table">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Birthdate</th>
-        <th>Address</th>
-        <th>Average</th>
-        <th>Management</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="aluno : ${list_student_in}">
-        <td th:text="${aluno.ids}"></td>
-        <td th:text="${aluno.name}"></td>
-        <td th:text="${aluno.email}"></td>
-        <td th:text="${aluno.birthdate.getDay()} + '/' + ${aluno.birthdate.getMonth()} + '/' + ${aluno.birthdate.year + 1900}" ></td>
-        <td th:text="${aluno.address}"></td>
-        <td th:text="${aluno.average}"></td>
-        <td><a href="#" onclick="changeAverage()">Change Average</a></td>
-    </tr>
-    </tbody>
-</table><br>
-
-<div>
-    <p id="changingAverage" style="display: none;">
-        Nota:&nbsp<input type="text">&nbsp
-        <button type="submit" onclick="changeAverage()">Change</button><br><br>
-    </p>
-</div>
-
-</div>
-</body>
+            <table border="1" class="table">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Birthdate</th>
+                    <th>Address</th>
+                    <th>Average</th>
+                    <th>Management</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="aluno : ${list_student_in}">
+                    <td th:text="${aluno.ids}"></td>
+                    <td th:text="${aluno.name}"></td>
+                    <td th:text="${aluno.email}"></td>
+                    <td th:text="${#dates.format(aluno.birthdate, 'dd/MM/yyyy')}" ></td>
+                    <td th:text="${aluno.address}"></td>
+                    <td th:text="${aluno.average}"></td>
+                    <td><a th:href="@{/teacher/student/in/cAverage/{id}(id=${aluno.ids})}">Change Average</a></td>
+                </tr>
+                </tbody>
+            </table><br>
+        </div>
+    </body>
 </html>
